fix: fix path to save static csv report file
